Minor dark mode fix

--- a/static/darken.css
+++ b/static/darken.css
@@ -11,7 +11,7 @@
 	color: white;
 }
 
-.darken .ui.special.popup > a {
+.darken .ui.special.popup  a {
 	color: lightgrey;
 }
 
